--- a/KeKeVideoPlayer/KeKeVideoPlayer/Products/Demo/Launch/LaunchScreen.storyboard
+++ b/KeKeVideoPlayer/KeKeVideoPlayer/Products/Demo/Launch/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,19 +23,19 @@
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="0Lh-XF-zyX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Chy-rf-Z5e"/>
                             <constraint firstAttribute="bottom" secondItem="0Lh-XF-zyX" secondAttribute="bottom" id="IaE-wj-31q"/>
-                            <constraint firstAttribute="trailing" secondItem="0Lh-XF-zyX" secondAttribute="trailing" id="nbs-zW-mup"/>
+                            <constraint firstAttribute="trailing" secondItem="0Lh-XF-zyX" secondAttribute="trailing" id="WW8-N5-CEF"/>
                             <constraint firstItem="0Lh-XF-zyX" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="tog-yO-ShO"/>
-                            <constraint firstItem="0Lh-XF-zyX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="x9U-PL-mzA"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen" width="426.66665649414062" height="640"/>
+        <image name="LaunchScreen" width="428" height="926"/>
     </resources>
 </document>
